--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,22 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-multipart==0.0.6
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+pydantic-settings>=2.6.0
+python-multipart>=0.0.6
 
 # LangChain
-langchain==0.1.0
-langchain-openai==0.0.2
-langchain-community==0.0.10
+langchain>=0.3.0
+langchain-openai>=0.2.0
+langchain-community>=0.3.0
 
 # Machine Learning
-scikit-learn==1.4.0
-joblib==1.3.2
-numpy==1.26.3
-pandas==2.1.4
+scikit-learn>=1.5.0
+joblib>=1.3.2
+numpy>=1.26.0
+pandas>=2.1.0
 
 # OpenAI
-openai==1.7.2
+openai>=1.57.0
 
 # CORS
 python-dotenv==1.0.0
